kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: huinong-financial
  labels:
    name: huinong-financial
